--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,13 @@ neo_version=21.1.201
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[1,)
 
+## Dependencies
+
+
+imgui_version=1.87.7
+
+acid_version=0.4.0
+
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
