add imgui and implement it.

--- a/build.gradle
+++ b/build.gradle
@@ -22,31 +22,15 @@ def groovyLibs = fileTree(dir: 'libs', include: ['groovy-*.jar'])
 repositories {
     // Add here additional repositories if required by some of the dependencies below.
 
-
     mavenLocal()
     mavenCentral()
 
 }
 
+
+jarJar.setEnabled(true)
+
 dependencies {
-
-    jarJar.setEnabled(true)
-
-    implementation (groovyLibs)
-    jarJar(groovyLibs)
-
-    implementation "io.github.spair:imgui-java-binding:${imgui_version}"
-    implementation("io.github.spair:imgui-java-lwjgl3:${imgui_version}") {
-        exclude group: 'org.lwjgl'
-    }
-
-    // jarjar them too
-    jarJar("io.github.spair:imgui-java-binding:${imgui_version}")
-    jarJar("io.github.spair:imgui-java-lwjgl3:${imgui_version}") {
-        exclude group: 'org.lwjgl'
-    }
-
-    implementation "dev.perxenic.acidapi:acidapi-neoforge:${acid_version}"
 }
 
 base {
@@ -139,7 +123,57 @@ configurations {
     runtimeClasspath.extendsFrom localRuntime
 }
 
+dependencies {
+    implementation (groovyLibs)
 
+    implementation "io.github.spair:imgui-java-binding:${imgui_version}"
+    implementation("io.github.spair:imgui-java-lwjgl3:${imgui_version}") {
+        exclude group: 'org.lwjgl'
+    }
+    implementation "io.github.spair:imgui-java-natives-windows:${imgui_version}"
+    implementation "io.github.spair:imgui-java-natives-linux:${imgui_version}"
+    implementation "io.github.spair:imgui-java-natives-macos:${imgui_version}"
+
+    jarJar(implementation("io.github.spair:imgui-java-binding:${imgui_version}")) {
+        version {
+            strictly "[${imgui_version}]"
+            prefer "${imgui_version}"
+        }
+    }
+    jarJar(implementation("io.github.spair:imgui-java-lwjgl3:${imgui_version}")) {
+        exclude group: 'org.lwjgl'
+        version {
+            strictly "[${imgui_version}]"
+            prefer "${imgui_version}"
+        }
+    }
+    jarJar(implementation("io.github.spair:imgui-java-natives-windows:${imgui_version}")) {
+        version {
+            strictly "[${imgui_version}]"
+            prefer "${imgui_version}"
+        }
+    }
+    jarJar(implementation("io.github.spair:imgui-java-natives-linux:${imgui_version}")) {
+        version {
+            strictly "[${imgui_version}]"
+            prefer "${imgui_version}"
+        }
+    }
+    jarJar(implementation("io.github.spair:imgui-java-natives-macos:${imgui_version}")) {
+        version {
+            strictly "[${imgui_version}]"
+            prefer "${imgui_version}"
+        }
+    }
+
+    clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-binding:${imgui_version}"
+    clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-lwjgl3:${imgui_version}"
+    clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-windows:${imgui_version}"
+    clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-linux:${imgui_version}"
+    clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-macos:${imgui_version}"
+
+    implementation "dev.perxenic.acidapi:acidapi-neoforge:${acid_version}"
+}
 
 // This block of code expands all declared replace properties in the specified resource targets.
 // A missing property will result in an error. Properties are expanded using ${} Groovy notation.
