--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,9 @@ dependencies {
     implementation "io.github.spair:imgui-java-natives-linux:${imgui_version}"
     implementation "io.github.spair:imgui-java-natives-macos:${imgui_version}"
 
+    jarJar(implementation (groovyLibs)) {
+    }
+
     jarJar(implementation("io.github.spair:imgui-java-binding:${imgui_version}")) {
         version {
             strictly "[${imgui_version}]"
@@ -171,6 +174,7 @@ dependencies {
     clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-windows:${imgui_version}"
     clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-linux:${imgui_version}"
     clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-macos:${imgui_version}"
+    additionalRuntimeClasspath (groovyLibs)
 
     implementation "dev.perxenic.acidapi:acidapi-neoforge:${acid_version}"
 }
