--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -4,3 +4,6 @@ public net.minecraft.client.renderer.GameRenderer postEffect
 public net.minecraft.client.renderer.GameRenderer effectActive
 public-f net.minecraft.client.renderer.GameRenderer minecraft
 public net.minecraft.client.renderer.GameRenderer getFov(Lnet/minecraft/client/Camera;FZ)D
+
+
+public net.minecraft.client.renderer.LightTexture lightTexture
