--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,15 @@ neoForge {
             systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
         }
 
+        client2 {
+            client()
+
+            programArguments.addAll '--username', 'Dev2'
+
+            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
+            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
+        }
+
         server {
             server()
             programArgument '--nogui'
@@ -176,6 +185,13 @@ dependencies {
     clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-windows:${imgui_version}"
     clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-linux:${imgui_version}"
     clientAdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-macos:${imgui_version}"
+
+    client2AdditionalRuntimeClasspath "io.github.spair:imgui-java-binding:${imgui_version}"
+    client2AdditionalRuntimeClasspath "io.github.spair:imgui-java-lwjgl3:${imgui_version}"
+    client2AdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-windows:${imgui_version}"
+    client2AdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-linux:${imgui_version}"
+    client2AdditionalRuntimeClasspath "io.github.spair:imgui-java-natives-macos:${imgui_version}"
+
     additionalRuntimeClasspath (groovyLibs)
 
     implementation "dev.perxenic.acidapi:acidapi-neoforge:${acid_version}"
