Add AMO skeletal animation model support
Introduces AMO model format with skeletal animation support, including new parser, model, face, vertex, joint, and animation classes. Integrates AMO model registration and rendering in GroovyEngineClient, adds ImGui controls for animation playback, and marks legacy OBJ animation classes as deprecated. Also updates rendering utilities and refactors Face/ObjParser for extensibility.

--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,7 @@ tasks.named('wrapper', Wrapper).configure {
 version = mod_version
 group = mod_group_id
 
-def groovyLibs = fileTree(dir: 'libs/groovy', include: ['groovy-*.jar'], exclude: ['*-sources.jar'])
-def worldEditLibs = fileTree(dir: 'libs/worldedit', include: ['*.jar'])
+def groovyLibs = fileTree(dir: 'libs/groovy', include: ['groovy-*.jar'])
 
 repositories {
     // Add here additional repositories if required by some of the dependencies below.
@@ -135,7 +134,9 @@ configurations {
 
 dependencies {
     implementation (groovyLibs)
-    implementation (worldEditLibs)
+
+    jarJar(implementation (groovyLibs)) {
+    }
 
     implementation "io.github.spair:imgui-java-binding:${imgui_version}"
     implementation("io.github.spair:imgui-java-lwjgl3:${imgui_version}") {
@@ -145,8 +146,6 @@ dependencies {
     implementation "io.github.spair:imgui-java-natives-linux:${imgui_version}"
     implementation "io.github.spair:imgui-java-natives-macos:${imgui_version}"
 
-    jarJar(implementation (groovyLibs)) {
-    }
 
     jarJar(implementation("io.github.spair:imgui-java-binding:${imgui_version}")) {
         version {
