--- a/run/groovyengine/gradle.properties
+++ b/run/groovyengine/gradle.properties
@@ -3,3 +3,8 @@ minecraft_version=1.21.1
 neoforge_version=21.1.201
 mappings_channel=parchment
 mappings_version=2024.11.17
+
+
+## Here is your Modules Definition
+
+module_name=myModule
