--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,9 @@ neoForge {
             // "REGISTRYDUMP": For getting the contents of all registries.
             systemProperty 'forge.logging.markers', 'REGISTRIES'
 
+            programArguments.addAll '-XX:+UseShenandoahGC'
+
+
             // Recommended logging level for the console
             // You can set various levels here.
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
