--- a/build.gradle
+++ b/build.gradle
@@ -196,7 +196,7 @@ dependencies {
 
     additionalRuntimeClasspath (groovyLibs)
 
-    implementation "dev.perxenic.acidapi:acidapi-neoforge:${acid_version}"
+    implementation fileTree(dir: 'libs/acidapi', include: 'acidapi-neoforge-0.4.0.jar')
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
