--- a/run/groovyengine/workspace/internal.gradle
+++ b/run/groovyengine/workspace/internal.gradle
@@ -72,7 +72,7 @@ tasks.register('buildModule', Copy) {
     println "Module name determined as: $moduleName" // This runs at configuration time
 
     from 'src'
-    into "modules/${moduleName}"
+    into "../modules/${moduleName}"
 
     doFirst {
         println "Starting copy from src to ../modules/${moduleName}"
